--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,3 +7,5 @@ Author: Who wrote it
 Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
 License: What license is it under?
+URL: https://github.com/NicholC/myColorPack
+BugReports: https://github.com/NicholC/myColorPack/issues
